--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
     "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
+    "description": "Digitalizando procesos | Su información es nuestro tesoro",
     "keywords": ["framework", "laravel"],
     "license": "MIT",
-    "type": "project",
+    "type": "App web",
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
@@ -15,7 +15,9 @@
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1",
         "laravelcollective/html": "5.1.*",
-        "barryvdh/laravel-dompdf": "0.6.*"
+        "barryvdh/laravel-dompdf": "0.6.*",
+        "guzzlehttp/guzzle": "~4.0"
+
     },
     "autoload": {
         "classmap": [
